--- a/19033684 Kumar Pulami/Views/MarksEntry/Index.cshtml
+++ b/19033684 Kumar Pulami/Views/MarksEntry/Index.cshtml
@@ -4,39 +4,41 @@
     Layout = "~/Views/Shared/MainLayout.cshtml";
 }
 
-<div class="row pt-3">
+<div class="row mt-5">
     <div class="col search-content d-flex justify-content-center align-content-center">
         <form asp-action="MarksEntry" method = "get">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <h4 class="bold"> Search Section</h4>
-            <div class="pt-3">
+            <h4 class="pt-3"> Search Section</h4>
+                <hr/>
+                <div class="">
                 <div class="form-group form-check-inline">
                     <label asp-for="Batch" class="control-label"></label>
-                    <input asp-for="Batch" class="form-control" />
-                    @*@Html.DropDownListFor(model => model.Batch, new SelectList(ViewBag.BatchList), htmlAttributes: new {@class = "form-control"})*@
-                    <span asp-validation-for="Batch" class="text-danger"></span>
+                    @Html.DropDownListFor(model => model.Batch, new SelectList(ViewBag.BatchList), "Select Batch", htmlAttributes: new {@class = "form-control"})
                 </div>
 
                 <div class="form-group form-check-inline">
                     <label asp-for="Grade" class="control-label"></label>
-                    <input asp-for="Grade" class="form-control" />@*
-                    @Html.DropDownListFor(model => model.Grade, new SelectList(" "), htmlAttributes: new {@class = "form-control"})*@
-                    <span asp-validation-for="Grade" class="text-danger"></span>
+                    @Html.DropDownListFor(model => model.Grade, new SelectList(ViewBag.GradeList), htmlAttributes: new {@class = "form-control"})
+                    <span asp-validation-for="@Model.Grade" class="text-danger d-block"></span>
+
                 </div>
                 <div class="form-group form-check-inline">
-                    <label asp-for="Section" class="control-label"></label>
-                    <input asp-for="Section" class="form-control" />@*
-                    @Html.DropDownListFor(model => model.Grade, new SelectList(" "), htmlAttributes: new {@class = "form-control"})*@
-                    <span asp-validation-for="Section" class="text-danger"></span>
+                    <label asp-for="Section" class="control-label"></label>                       
+                    @Html.DropDownListFor(model => model.Section, new SelectList(ViewBag.SectionList), htmlAttributes: new {@class = "form-control"})
+                    <span asp-validation-for="Section" class="text-danger d-block"></span>
+
                 </div>
 
                 <div class="form-group form-check-inline">
                     <label asp-for="Terminal" class="control-label"></label>
-                    <input asp-for="Terminal" class="form-control" />
-                    @*@Html.DropDownListFor(model => model.Terminal, new SelectList(" "), htmlAttributes: new {@class = "form-control"})*@
-                    <span asp-validation-for="Terminal" class="text-danger"></span>
+                    @Html.DropDownListFor(model => model.Terminal, new SelectList(ViewBag.TerminalList, "TerminalID", "TerminalName"), htmlAttributes: new {@class = "form-control"})
                 </div>
-
+                <div class="d-block">
+                    <span asp-validation-for="Batch" class="text-danger d-block"></span>
+                    <span asp-validation-for="Grade" class="text-danger d-block"></span>
+                    <span asp-validation-for="Section" class="text-danger d-block"></span>
+                    <span asp-validation-for="Terminal" class="text-danger d-block"></span>
+                </div>
                 <div class="form-group py-3">
                     <input type="submit" value="Search" class="btn btn-dark" />
                 </div>
@@ -46,3 +48,8 @@
 </div>
 
 
+@section Scripts
+{
+    <script src="~/js/MarksEntry.js" asp-append-version="true"></script>        
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
