--- a/19033684 Kumar Pulami/Views/Marksheet/Marksheet.cshtml
+++ b/19033684 Kumar Pulami/Views/Marksheet/Marksheet.cshtml
@@ -30,15 +30,24 @@
 
 @if (Model.SubjectMarks != null)
 {
+    <div class="row d-flex justify-content-between">
+        <div class="col">
+
+        </div>
+        <div class="col d-flex justify-content-between">
+            <div></div>
+            <input id="printPDF" class="btn btn-info btn-lg" type="button" value="Print PDF"/>
+        </div>
+    </div>
     <hr/>
-    <div class="col px-2 py-2" style="outline: thick solid #000000">
+    <div class="col px-2 py-2" style="outline: thick solid #000000" id="printsection">
         <div class="row justify-content-between">
             <div class="col pt-3 pl-5">
                 <img style="width: 80px; height: 80px; margin-left: 20px;" src="~/Assets/Images/school_logo.png">
             </div>
             <div class="col">
                 <div class="row d-flex justify-content-center align-content-center">                
-                    <h3 style="text-align: center; font-weight: bold;">The Spirit High School</h3>
+                    <h4 style="text-align: center; font-weight: bold;">The Spirit High School</h4>
                 </div>
                 <div class="row d-flex d-block justify-content-center align-content-center">
                     <p style="text-align: center">
@@ -240,4 +249,9 @@
 }
 
 
+@section scripts{
+   <script src="~/js/printPDF.js" asp-append-version="true"></script>
+   <script src="~/js/printThis.js" asp-append-version="true"></script>
+   @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
 
