--- a/19033684 Kumar Pulami/Views/Admission/AdmissionForm.cshtml
+++ b/19033684 Kumar Pulami/Views/Admission/AdmissionForm.cshtml
@@ -29,9 +29,18 @@
                         <span asp-validation-for="BOD" class="text-danger"></span>
                     </div>
                     <br>
-                    <div class="col form-group form-check-inline">
+                    <div class="col form-group">
                         <label asp-for="Gender" class="control-label"></label>
-                        <input asp-for="Gender" class="form-control" />
+                        <div class="col">
+                            <label class="radio-inline">
+                                @Html.RadioButtonFor(model => model.Gender, "Male", new {@value = "gender"})
+                                Male
+                            </label>
+                            <label class="radio-inline">
+                                @Html.RadioButtonFor(model => model.Gender, "Female", new {@value = "gender"})
+                                Female
+                            </label>
+                        </div>
                         <span asp-validation-for="Gender" class="text-danger"></span>
                     </div>
                 </div>
