--- a/19033684 Kumar Pulami/Views/ClassTerminal/Index.cshtml
+++ b/19033684 Kumar Pulami/Views/ClassTerminal/Index.cshtml
@@ -1,10 +1,9 @@
-﻿@model _19033684_Kumar_Pulami.Models.ViewModel.ClassSubjectViewModel
+﻿@model _19033684_Kumar_Pulami.Models.ViewModel.BatchGradeTerminal.BatchGradeTerminalViewModel
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/MainLayout.cshtml";
 }
-
 <div class="row mt-5">
     <div class="col search-content d-flex justify-content-center align-content-center">
         <form asp-action="Index" method = "post">
@@ -33,14 +32,14 @@
 </div>
 
 
-@if (Model.SubjectList != null)
+@if (Model.TerminalList != null)
 {
 
 <div class="col mt-5">    
-    <form asp-action="AssignSubject" method="get">            
+    <form asp-action="AssignTerminal" method="get">            
         <div class="row d-flex-inline justify-content-between">                
-                <h4 class="col">Subject Information</h4>
-                <input type="submit" class="btn btn-success col" value="Assign Subject"/>                   
+                <h4 class="col">Terminal Information</h4>
+                <input type="submit" class="btn btn-success col" value="Assign Terminal"/>                   
          </div>      
     </form>
     <hr/>
@@ -55,16 +54,16 @@
             </thead>
 
             <tbody>
-                @foreach (var item in Model.SubjectList) {
+                @foreach (var item in Model.TerminalList) {
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.SubjectID)
+                            @Html.DisplayFor(modelItem => item.TerminalID)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.SubjectName)
+                            @Html.DisplayFor(modelItem => item.TerminalName)
                         </td>                        
                         <td>
-                            @Html.ActionLink("Delete", "Delete", new { Model.Batch, Model.Grade, item.SubjectID }, htmlAttributes: new {@class = "btn btn-danger"})
+                            @Html.ActionLink("Delete", "Delete", new { Model.Batch, Model.Grade, item.TerminalID }, htmlAttributes: new {@class = "btn btn-danger"})
                         </td>
                     </tr>
                 }
@@ -76,6 +75,6 @@
 
 
 @section scripts{
-   <script src="~/js/GradeSubject.js" asp-append-version="true"></script>
+   <script src="~/js/GradeTerminal.js" asp-append-version="true"></script>
    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
