--- a/19033684 Kumar Pulami/Views/Dashboard/Index.cshtml
+++ b/19033684 Kumar Pulami/Views/Dashboard/Index.cshtml
@@ -1,8 +1,164 @@
-﻿
+﻿@model _19033684_Kumar_Pulami.Models.ViewModel.Dashboard.DashboardViewModel
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/MainLayout.cshtml";
 }
 
-<h1>Index</h1>
 
+<style>
+    .order-card {
+    color: #fff;
+    }
+
+    .bg-c-blue {
+        background: linear-gradient(45deg,#4099ff,#73b4ff);
+    }
+
+    .bg-c-green {
+        background: linear-gradient(45deg,#2ed8b6,#59e0c5);
+    }
+
+    .bg-c-yellow {
+        background: linear-gradient(45deg,#FFB64D,#ffcb80);
+    }
+
+    .bg-c-pink {
+        background: linear-gradient(45deg,#FF5370,#ff869a);
+    }
+    .bg-c-purple {
+        background: linear-gradient(45deg,#845EC2,#8B68C4);
+    }
+
+
+    .card {
+        border-radius: 5px;
+        -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+        box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+        border: none;
+        margin-bottom: 30px;
+        -webkit-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .card .card-block {
+        padding: 25px;
+    }
+
+    .order-card i {
+        font-size: 26px;
+    }
+
+    .f-left {
+        float: left;
+    }
+
+    .f-right {
+        float: right;
+    }
+</style>
+
+
+
+
+<div class="container overview mt-5" style="background-color: #E4E9F9">
+    <div class="row">
+        <h2><strong>Overview</strong></h2>
+        <hr/>
+    </div>
+    <div class="row">        
+        <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-blue order-card">
+                <div class="card-block">
+                    <h4 class="m-b-20">Total Student</h4>
+                    <h3 class="text-right"><i class="fa-regular fa-user-graduate f-left"></i><span>&nbsp;&nbsp;@ViewBag.TotalStudent</span></h3>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-green order-card">
+                <div class="card-block">
+                    <h4 class="m-b-20">Total Teacher</h4>
+                    <h3 class="text-right"><i class="fa-regular fa-user-tie f-left"></i><span>&nbsp;&nbsp;@ViewBag.TotalTeacher</span></h3>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-yellow order-card">
+                <div class="card-block">
+                    <h4 class="m-b-20">Total Subject</h4>
+                    <h3 class="text-right"><i class="fa-regular fa-book-blank f-left"></i><span>&nbsp;&nbsp;@ViewBag.TotalSubject</span></h3>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-pink order-card">
+                <div class="card-block">
+                    <h4 class="m-b-20">Total Terminal</h4>
+                    <h3 class="text-right"><i class="fa-regular fa-clipboard f-left"></i><span>&nbsp;&nbsp;@ViewBag.TotalTerminal</span></h3>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-purple order-card">
+                <div class="card-block">
+                    <h4 class="m-b-20">Total Exam</h4>
+                    <h3 class="text-right"><i class="fa-regular fa-diploma f-left"></i><span>&nbsp;&nbsp;@ViewBag.TotalExam</span></h3>
+                </div>
+            </div>
+        </div>
+	</div>
+</div>
+
+
+
+<div class="row mt-5">
+<h2><strong>Recently Admitted</strong></h2>
+<hr/>
+    <div class = "d-flex table-content">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>Student ID</th>
+                    <th>Name</th>
+                    <th>Batch</th>
+                    <th>Grade</th>
+                    <th>Section</th>
+                    <th>Address</th>
+                    <th>Guardian Contact</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                @foreach (var item in Model.StudentList){
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StudentID)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StudentName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Batch)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Grade)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Section)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Address)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.GuardianContact)
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
