--- a/19033684 Kumar Pulami/Views/Login/Login.cshtml
+++ b/19033684 Kumar Pulami/Views/Login/Login.cshtml
@@ -60,8 +60,9 @@
                         <div class="text-center">
                             <img src="~/Assets/Images/lunivalogo.png" alt="" class="img-fluid log_img">
                         </div>
-                        <h5 class="card-title text-center">Welcome Back</h5>
-                        <form asp-action="login" method="post">
+                        <h5 class="card-title text-center">Welcome Back</h5
+                            @Html.AntiForgeryToken()
+                        <form asp-action="login" method="post">                            
                             <div class="mt-4">
                                 <div class="form-row">
                                     <div class="col-md-12">
