--- a/19033684 Kumar Pulami/Views/ManageStudent/Edit.cshtml
+++ b/19033684 Kumar Pulami/Views/ManageStudent/Edit.cshtml
@@ -39,7 +39,16 @@
                 <br>
                 <div class="col form-group form-check-inline">
                     <label asp-for="Gender" class="control-label"></label>
-                    <input asp-for="Gender" class="form-control" />
+                    <div class="col">
+                        <label class="radio-inline">
+                            @Html.RadioButtonFor(model => model.Gender, "Male", new {@value = "gender"})
+                            Male
+                        </label>
+                        <label class="radio-inline">
+                            @Html.RadioButtonFor(model => model.Gender, "Female", new {@value = "gender"})
+                            Female
+                        </label>
+                    </div>
                     <span asp-validation-for="Gender" class="text-danger"></span>
                 </div>
             </div>
