--- a/19033684 Kumar Pulami/Views/ClassTerminal/AssignTerminal.cshtml
+++ b/19033684 Kumar Pulami/Views/ClassTerminal/AssignTerminal.cshtml
@@ -6,7 +6,7 @@
 }
 <br>
 <br>
-<h3>Assign Subject</h3>
+<h3>Assign Terminal</h3>
 <hr/>
 <div class="row">
     <div class="col-md-7">
@@ -38,7 +38,7 @@
                 <div class="col">
                     <br>
                     <br>
-                    <input type="submit" value="Assign Subject" class="btn btn-success" />
+                    <input type="submit" value="Assign Terminal" class="btn btn-success" />
                     @Html.ActionLink("Back To Index", "Index", "ClassTerminal", htmlAttributes: new {@class = "btn btn-primary"})
                     <br>
                     <br>
