--- a/19033684 Kumar Pulami/Views/ClassTerminal/Index.cshtml
+++ b/19033684 Kumar Pulami/Views/ClassTerminal/Index.cshtml
@@ -47,8 +47,8 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th>Subject ID</th>
-                    <th>Subject Name</th>
+                    <th>Terminal ID</th>
+                    <th>Terminal Name</th>
                     <th>Actions</th>
                 </tr>
             </thead>
