--- a/19033684 Kumar Pulami/Views/MarksEntry/MarksEntry.cshtml
+++ b/19033684 Kumar Pulami/Views/MarksEntry/MarksEntry.cshtml
@@ -110,8 +110,12 @@
     </div>
 
     <div>
-        <input type="submit" value="Update" id="updateButton" class="btn-success btn"/>
-    </div>    
+        <input type="submit" value="Update Marks" id="updateButton" class="btn-success btn"/>
+    </div>
+    <div>
+        <br>
+    </div>
+    
 </div>
 }
 
