--- a/19033684 Kumar Pulami/Views/Shared/MainLayout.cshtml
+++ b/19033684 Kumar Pulami/Views/Shared/MainLayout.cshtml
@@ -173,7 +173,7 @@
                             </button>                            
                         </div>*@
 
-                        <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        <div class="alert alert-success alert-dismissible pt-3" role="alert">
                           <strong>Success!</strong> @TempData["SuccessMessage"]
                           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
